<resources>
    <string name="app_name">Dog BT</string>
    <string name="ble_failed">"Connection fail"</string>
    <string name="ble_successed">"Connection success"</string>
    <string name="please_wait">"Please wait"</string>
    <string name="title_activity_ti">TiActivity</string>
    <string name="action_settings">Settings</string>
    <string name="open_ble">"Turn on Bluetooth"</string>
    <string name="open">"Open"</string>
    <string name="cancel">"Cancel"</string>
    <string name="no_server">"The device does not support online upgrades"</string>
    <string name="back">"Back"</string>
    <string name="confirm">"Confirm"</string>
    <string name="toast_setting_fail">"Setup failed. Upgrade with current interval"</string>
    <string name="preference_showhidden_key">showhidden</string>
    <string name="preference_showhidden_default_value">false</string>
    <string name="toast_warn_scard_ejected">Sdcard Ejected.</string>
    <string name="chose_path">"Select image"</string>
    <string name="success">"0x00：Success"</string>
    <string name="fail">"Fail"</string>
    <string name="fail_miss">"0x02：Packet loss"</string>
    <string name="fail_error">"0x01：Checksum error"</string>
    <string name="fail_invalid">"0x03：Invalid data"</string>
    <string name="fail_firmware_invalid">"0x04：Image invalid"</string>
    <string name="block_finish">"Send complete, wait for device confirmation"</string>
    <string name="disconnected">"The device is disconnected"</string>
    <string name="version">"Version：V%s"</string>
    <string name="search">"Search"</string>
    <string name="path">"Device image: "</string>
    <string name="file">"Update image: "</string>
    <string name="between">"Transmission interval(ms): "</string>
    <string name="connect_min">"Connection intervalMin: "</string>
    <string name="connect_max">"Connection intervalMax: "</string>
    <string name="start">Start</string>
    <string name="title_search">"Device List"</string>
    <string name="title_block">"Image transfer"</string>
    <string name="title_path">"Image selection"</string>
    <string name="empty">"Image empty"</string>
    <string name="setting_wait">"Set connection interval"</string>
    <string name="refresh">Refresh</string>
    <string name="block_timeout">"Transmission response timeout"</string>
    <string name="toast_file_name">Make sure that the new firmware name contains "OTAA" or "OTAB"</string>


    <string name="tws_downmix">DM</string>
    <string name="tws_left_channel">L</string>
    <string name="tws_master">Master speaker:</string>
    <string name="tws_none">None</string>
    <string name="tws_right_channel">R</string>
    <string name="tws_slave">Slave speaker:</string>
    <string name="tws_stereo">Stereo</string>
    <string name="tws_mono">Mono</string>
    <string name="update_abort">Abort</string>
    <string name="update_alert_battery_low">The battery on the board is low. Please connect a charger.</string>
    <string name="update_alert_battery_low_title">Battery low</string>
    <string name="update_alert_commit">The data has been uploaded on the board and the board is ready for the commit process. Do you want to commit your upload?</string>
    <string name="update_alert_commit_title">Data commit</string>
    <string name="update_alert_erase_sqif">This update will erase the SQIF, do you want to continue?</string>
    <string name="update_alert_erase_sqif_title">Erase SQIF</string>
    <string name="update_alert_transfer_complete">The data transfer is complete, do you want to continue the upgrade process? The board will be reboot before to process.</string>
    <string name="update_alert_transfer_complete_title">Data transfer complete</string>
    <string name="update_complete">The update is complete.</string>
    <string name="update_complete_title">Update complete</string>
    <string name="update_error">An error has occurred during the update, please abort it.</string>
    <string name="update_error_code">The VM error code is:</string>
    <string name="update_error_sync_is_different">The error is: WARN_SYNC_ID_IS_DIFFERENT. By aborting we will restart the update.</string>
    <string name="update_error_vm_connection_failed">The VM connection failed, please abort and try again.</string>
    <string name="update_in_progress">Update in progress</string>
    <string name="update_no_available_file">"No update file is available. Add an update file into a 'VMUPGRADE' folder on your Android device."</string>
    <string name="update_step_commit">Update commit…</string>
    <string name="update_step_data_transfer">Data transfer…</string>
    <string name="update_step_in_progress">Update in progress…</string>
    <string name="update_step_initialisation">Initialisation…</string>
    <string name="update_step_transfer_complete">Data transfer complete…</string>
    <string name="update_step_validation">Data validation…</string>
    <string name="update_vm_command_failed">The GAIA command VM Control failed.</string>
    <string name="title_activity_software_support">SoftwareSupportActivity</string>

    <string name="update_error_from_board">Error information sent by the board:</string>

    <string name="update_error_dot">&#8226;</string>

    <string name="upgrade_failed">Upgrade Failed.</string>

    <!--Permission notice-->
    <string name="settings">SETTING</string>
    <string name="help">Help</string>
    <string name="string_help_text">The current application is missing the necessary permissions.
        \n\nPlease click \"SETTING\" - \"Permissions\" - to open the required permissions.
        \n\nThen click the Back button twice to return.
    </string>
    <string name="quit">EXIT</string>

    <string name="string_location_help_text"> Need to open the GPS to search for the device, now open the GPS? </string>
    <string name="toast_sys_scanble_failed">System Bluetooth scan failed, please check System Bluetooth ...</string>

    <string name="alert_ok">OK</string>
</resources>
