<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8DFE8"
    android:orientation="vertical" >

    <include layout="@layout/item_title" />

    <LinearLayout
        android:id="@+id/lay_no_server"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_server"
            android:textColor="#222222"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:text="@string/back" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_has_server"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/path"
                android:textColor="#222222"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_target"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textColor="#222222"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_refresh"
                android:layout_width="48dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_textview"
                android:gravity="center"
                android:text="@string/refresh"
                android:textColor="@color/textview_text"
                android:textSize="17sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#888888" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_file"
                android:layout_width="135dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_textview"
                android:gravity="center"
                android:text="@string/chose_path"
                android:textColor="@color/textview_text"
                android:textSize="17sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#888888" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/file"
                android:textColor="#222222"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_file_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="#222222"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#888888" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="108dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/connect_min"
                    android:textColor="#222222"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_wait_min"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:padding="4dp"
                    android:text="11"
                    android:textColor="#222222"
                    android:textSize="14sp" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="108dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/connect_max"
                    android:textColor="#222222"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_wait_max"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:padding="4dp"
                    android:text="12"
                    android:textColor="#222222"
                    android:textSize="14sp" >
                </EditText>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#888888" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#888888"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/tv_setting"
                android:layout_width="135dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_textview"
                android:gravity="center"
                android:text="@string/setting_wait"
                android:textColor="@color/textview_text"
                android:textSize="17sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#888888" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:layout_width="108dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/between"
                android:textColor="#222222"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_wait_time"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="center_vertical"
                android:padding="4dp"
                android:text="20"
                android:textColor="#222222"
                android:textSize="14sp" >
            </EditText>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#888888"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ProgressBar
                android:id="@+id/pro_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="00:00"
                android:textColor="#222222"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_pencent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#222222"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_blocks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#222222"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_start"
                android:layout_width="135dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_textview"
                android:gravity="center"
                android:text="@string/start"
                android:textColor="@color/textview_text"
                android:textSize="17sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/disconnected"
            android:textColor="#FF0000" />

        <TextView
            android:id="@+id/tv_block_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="#FF0000" />
    </LinearLayout>

</LinearLayout>